--- a/public/sass/_responsive.scss
+++ b/public/sass/_responsive.scss
@@ -541,6 +541,11 @@ margin-bottom: 30px;
   justify-content: center;
 }
 
+#startenals .elementor-tab-content p:last-child, #startenals .elementor-tab-content {
+  margin-bottom: 0 !important;
+  padding-bottom: 0!important;
+}
+
 }
 
     
